# market-decision-lab

./: .gitignore  ARCHITECTURE.md  CODEX_GUIDE.md  CODEX_PROMPT_RU.md  CONTRIBUTING.md  PROJECT_CONTEXT_RU.md  PR_CHECKLIST.md  README.md  export_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security-audit.yml
app/: README_APP.md  streamlit_app.py  ui_guards.py
app/pages/: Logs.py
core/market_decision_lab/: __init__.py  backtest.py  config.py  data.py  decision.py  log_store.py  scenarios.py  storage.py  strategies.py  strategy_backtest.py  strategy_lab.py
src/mdl/: __init__.py  config.py  decision.py  log_store.py  logging_helpers.py  scenarios.py  storage.py
src/mdl/backtest/: __init__.py  engine.py  metrics.py
src/mdl/data/: __init__.py  ohlcv.py
src/mdl/fixtures/: ohlcv_1d.csv  ohlcv_1h.csv  ohlcv_4h.csv
src/mdl/lab/: __init__.py  strategy_lab.py
src/mdl/strategies/: __init__.py  bollinger.py  donchian.py  ema.py  macd.py  rsi.py
tests/: test_logging_helpers.py  test_ohlcv_resilience.py  test_smoke.py  test_ui_guards.py
tools/: export_data.py  smoke_check.py
